--- a/_config.yml
+++ b/_config.yml
@@ -128,7 +128,7 @@ navbar-var-length: false
 navbar-col: #FFF0F5"
 navbar-text-col: "#E6E6FA"
 navbar-border-col: "#FFFFF0"
-page-col: "#00002F"
+page-col: "#000000"
 text-col: "#FFFAF0"
 link-col: "#B0C4DE"
 hover-col: "#FAF0E6"
