powinno naprawic widocznosc spotify

--- a/_config.yml
+++ b/_config.yml
@@ -126,7 +126,7 @@ navbar-var-length: false
 
 navbar-text-col: "#E6E6FA"
 link-col: "#B0C4DE"
-navbar-col: "#EAEAEA"
+navbar-col: "#778899"
 navbar-border-col: "#DDDDDD"
 page-col: "#FFFFFF"
 text-col: "#404040"
